--- a/parties.html
+++ b/parties.html
@@ -25,14 +25,14 @@
                                         <h2>Registered Political Parties</h2>
                                     </div>
                                 </div>
-                                <div class="col-12 mx">
+                                <div class="col-11 mx">
                                    <div class="addNewParty">
                                         <a class="btn" href="newParty.html" style="color:black">Create new party</a>
                                    </div>
                                 </div>
                             </div>
                             <div class="row jcc">
-                                <div class="col-10 mx">
+                                <div class="col-12 mx">
                                     <table id = "dataTable">
                                         <thead>
                                             <tr>
@@ -49,8 +49,8 @@
                                                 <td>1</td>
                                                 <td>Peoples Democratic Party</td>
                                                 <td><Acronym>PDP</Acronym></td>
-                                                <td></td>
-                                                <td></td>
+                                                <td><img src="./assets/img/pdp.png" alt="PDP logo" style="height: 50px; width: 50px"></td>
+                                                <td>Wadata Plaza, Michael Okpara Way, Zone 5, Wuse, Abuja</td>
                                                 <td>
                                                     <a href="partyEdit.html">Edit</a>
                                                     <button class="btn delete" type="submit">Delete</button>
@@ -61,8 +61,8 @@
                                                 <td>2</td>
                                             <td>Labour Party</td>
                                             <td><Acronym>LP</Acronym></td>
-                                            <td></td>
-                                            <td></td>
+                                            <td><img src="./assets/img/LP.jpg" alt="PDP logo" style="height: 50px; width: 50px"></td>
+                                            <td> Dabo Shopping Mall, 2nd Floor, Plot 73 Ladoke Akintola Boulevard, Garki, Abuja</td>
                                             <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
@@ -73,8 +73,8 @@
                                                 <td>3</td>
                                             <td>Democratic Peoples Party</td>
                                             <td><Acronym>DPP</Acronym></td>
-                                            <td></td>
-                                            <td></td>
+                                            <td><img src="./assets/img/dpp.jpg" alt="DPP logo" style="height: 50px; width: 50px"></td>
+                                            <td>No. 1 Nouakchott Street Zone 1, Wuse, Abuja</td>
                                             <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
@@ -85,8 +85,8 @@
                                                 <td>4</td>
                                                 <td>Progressive Peoples Alliance</td>
                                                 <td><Acronym>PPA</Acronym></td>
-                                                <td></td>
-                                                <td></td>
+                                                <td><img src="./assets/img/ppa.gif" alt="PPA logo" style="height: 50px; width: 50px"></td>
+                                                <td>Warri Street, off Emeka Anyoku Street, Area 11, Garki, Abuja</td>
                                                 <td>
                                                     <a href="partyEdit.html">Edit</a>
                                                     <button class="btn delete" type="submit">Delete</button>
@@ -97,8 +97,8 @@
                                                 <td>5</td>
                                                 <td>All Peoples Congress</td>
                                                 <td><Acronym>APC</Acronym></td>
-                                                <td></td>
-                                                <td></td>
+                                                <td><img src="./assets/img/apc.png" alt="APC logo" style="height: 50px; width: 50px"></td>
+                                                <td>40 Blantyre Street, Wuse II; Abuja, Nigeria</td>
                                                 <td>
                                                     <a href="partyEdit.html">Edit</a>
                                                     <button class="btn delete" type="submit">Delete</button>
