--- a/politicalOffice.html
+++ b/politicalOffice.html
@@ -47,7 +47,7 @@
                                             <tr>
                                                 <td>1</td>
                                                 <td>Governor</td>
-                                                <td>Alabama</td>
+                                                <td>State</td>
                                                 <td>
                                                     <button class="btn contest" type="submit">Contest</button>
                                                 </td>
@@ -56,7 +56,7 @@
                                             <tr>
                                                 <td>2</td>
                                             <td>Governor</td>
-                                            <td>New York</td>
+                                            <td>State</td>
                                             <td>
                                                 <button class="btn contest" type="submit">Contest</button>
                                             </td>
@@ -65,7 +65,7 @@
                                             <tr>
                                                 <td>3</td>
                                             <td>Mayor</td>
-                                            <td>New York</td>
+                                            <td>Local</td>
                                             <td>
                                                 <button class="btn contest" type="submit">Contest</button>
                                             </td>
@@ -74,7 +74,7 @@
                                             <tr>
                                                 <td>4</td>
                                                 <td>President</td>
-                                                <td>United State of America</td>
+                                                <td>Federal</td>
                                                 <td>
                                                     <button class="btn contest" type="submit">Contest</button>
                                                 </td>
@@ -83,7 +83,7 @@
                                             <tr>
                                                 <td>5</td>
                                                 <td>Senator</td>
-                                                <td>Vermont</td>
+                                                <td>Legislative</td>
                                                 <td>
                                                     <button class="btn contest" type="submit">Contest</button>
                                                 </td>
