--- a/passReset.html
+++ b/passReset.html
@@ -39,16 +39,16 @@
                         <div class="form-container">
                             <form action="" id="regForm" class="form mb-10">
                                 <div class="single-input mb-10">
-                                    <input type="email" name="email" placeholder="e.g john@aol.com" required onfocus="this.placeholder = ''" onblur="this.placeholder = 'email'">
+                                    <input type="email" name="email" placeholder="enter your email" required onfocus="this.placeholder = ''" onblur="this.placeholder = 'email'">
                                 </div>
-                                <div class="single-input mb-10">
+                                <!-- <div class="single-input mb-10">
                                     <input type="password" name="password" placeholder="password" onfocus="this.placeholder=''" onblur="this.placeholder ='password'">
                                 </div>
                                 <div class="single-input mb-10">
                                     <input type="password" name="confirmPassword" placeholder="Confirm password" onblur="this.placeholder='Confirm password'" onfocus="this.placeholder=''">
-                                </div>
+                                </div> -->
                                 <div class="d-flex jcc">
-                                    <button class="mt-10 aic btn btn-primary text-uppercase">Reset Password</button>
+                                    <button class="mt-10 aic btn btn-primary text-uppercase">Send Link</button>
                                 </div>
                             </form>
                         </div><!-- form-container closed-->
